<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		android_large___1
	 *	@date 		Monday 08th of May 2023 02:45:39 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/android_large___1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_android_large___1_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__android_large___1_ek2"
					android:background="@drawable/_bg__android_large___1_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />

				<View   android:id="@+id/rectangle_15"
					android:background="@drawable/rectangle_15_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="186dp" />

				<View   android:id="@+id/rectangle_14"
					android:background="@drawable/rectangle_14_shape"
					 android:layout_marginStart="183dp"
					android:layout_marginTop="47dp"
					android:layout_width="136dp"
					android:layout_height="36dp" />

				<ImageView android:id="@+id/rectangle_1"
					android:src="@drawable/rectangle_1"
					android:contentDescription="rectangle_1"
					 android:layout_marginStart="26dp"
					android:layout_marginTop="124dp"
					android:layout_width="303dp"
					android:layout_height="128dp" />

				<View   android:id="@+id/rectangle_3"
					android:background="@drawable/rectangle_3_shape"
					 android:layout_marginStart="21dp"
					android:layout_marginTop="312dp"
					android:layout_width="316dp"
					android:layout_height="208dp" />

				<View   android:id="@+id/rectangle_4"
					android:background="@drawable/rectangle_4_shape"
					 android:layout_marginStart="21dp"
					android:layout_marginTop="533dp"
					android:layout_width="316dp"
					android:layout_height="210dp" />

				<TextView android:id="@+id/mobile_game"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:textSize="15sp"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="42dp"
					android:layout_marginTop="330dp"
					android:layout_width="132.5dp"
					android:layout_height="35.5dp"
					android:text="@string/mobile_game_string"
					 />

				<View   android:id="@+id/rectangle_5"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="33dp"
					android:layout_marginTop="411dp"
					android:layout_width="91dp"
					android:layout_height="97dp" />

				<View   android:id="@+id/rectangle_6"
					android:background="@drawable/rectangle_6_shape"
					 android:layout_marginStart="138dp"
					android:layout_marginTop="411dp"
					android:layout_width="92dp"
					android:layout_height="97dp" />

				<View   android:id="@+id/rectangle_7"
					android:background="@drawable/rectangle_7_shape"
					 android:layout_marginStart="240dp"
					android:layout_marginTop="413dp"
					android:layout_width="90dp"
					android:layout_height="97dp" />

				<ImageView android:id="@+id/image_3"
					android:src="@drawable/image_3"
					android:contentDescription="image_3"
					 android:layout_marginStart="247dp"
					android:layout_marginTop="377dp"
					android:layout_width="66dp"
					android:layout_height="81dp" />

				<ImageView android:id="@+id/image_2"
					android:src="@drawable/image_2"
					android:contentDescription="image_2"
					 android:layout_marginStart="147dp"
					android:layout_marginTop="375dp"
					android:layout_width="67dp"
					android:layout_height="82dp" />

				<TextView android:id="@+id/pc_game"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:textSize="15sp"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="39dp"
					android:layout_marginTop="557dp"
					android:layout_width="111.5dp"
					android:layout_height="23.5dp"
					android:text="@string/pc_game_string"
					 />

				<View   android:id="@+id/rectangle_8"
					android:background="@drawable/rectangle_8_shape"
					 android:layout_marginStart="33dp"
					android:layout_marginTop="624dp"
					android:layout_width="91dp"
					android:layout_height="96dp" />

				<View   android:id="@+id/rectangle_9"
					android:background="@drawable/rectangle_9_shape"
					 android:layout_marginStart="138dp"
					android:layout_marginTop="624dp"
					android:layout_width="92dp"
					android:layout_height="96dp" />

				<View   android:id="@+id/rectangle_10"
					android:background="@drawable/rectangle_10_shape"
					 android:layout_marginStart="240dp"
					android:layout_marginTop="624dp"
					android:layout_width="90dp"
					android:layout_height="96dp" />

				<ImageView android:id="@+id/image_8"
					android:src="@drawable/image_8"
					android:contentDescription="image_8"
					 android:layout_marginStart="147dp"
					android:layout_marginTop="594dp"
					android:layout_width="67dp"
					android:layout_height="81dp" />

				<ImageView android:id="@+id/image_9"
					android:src="@drawable/image_9"
					android:contentDescription="image_9"
					 android:layout_marginStart="248dp"
					android:layout_marginTop="594dp"
					android:layout_width="65dp"
					android:layout_height="81dp" />

				<ImageView android:id="@+id/image_12"
					android:src="@drawable/image_12"
					android:contentDescription="image_12"
					 android:layout_marginStart="42dp"
					android:layout_marginTop="594dp"
					android:layout_width="61dp"
					android:layout_height="81dp" />

				<TextView android:id="@+id/fifa_23"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:textSize="12sp"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="50dp"
					android:layout_marginTop="473dp"
					android:layout_width="64dp"
					android:layout_height="20dp"
					android:text="@string/fifa_23_string"
					 />

				<TextView android:id="@+id/ml"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:textSize="12sp"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="169dp"
					android:layout_marginTop="473dp"
					android:layout_width="37dp"
					android:layout_height="23dp"
					android:text="@string/ml_string"
					 />

				<TextView android:id="@+id/pubgm"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:textSize="12sp"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="256dp"
					android:layout_marginTop="473dp"
					android:layout_width="67dp"
					android:layout_height="23dp"
					android:text="@string/pubgm_string"
					 />

				<TextView android:id="@+id/valorant"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="46dp"
					android:layout_marginTop="688dp"
					android:layout_width="76dp"
					android:layout_height="19dp"
					android:text="@string/valorant_string"
					 />

				<TextView android:id="@+id/point_blank"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="148dp"
					android:layout_marginTop="688dp"
					android:layout_width="89dp"
					android:layout_height="19dp"
					android:text="@string/point_blank_string"
					 />

				<TextView android:id="@+id/fortnite"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="265dp"
					android:layout_marginTop="688dp"
					android:layout_width="69dp"
					android:layout_height="19dp"
					android:text="@string/fortnite_string"
					 />

				<View   android:id="@+id/rectangle_11"
					android:background="@drawable/rectangle_11_shape"
					 android:layout_marginStart="222dp"
					android:layout_marginTop="325dp"
					android:layout_width="91dp"
					android:layout_height="27dp" />

				<View   android:id="@+id/rectangle_12"
					android:background="@drawable/rectangle_12_shape"
					 android:layout_marginStart="222dp"
					android:layout_marginTop="325dp"
					android:layout_width="91dp"
					android:layout_height="27dp" />

				<View   android:id="@+id/rectangle_13"
					android:background="@drawable/rectangle_13_shape"
					 android:layout_marginStart="222dp"
					android:layout_marginTop="549dp"
					android:layout_width="91dp"
					android:layout_height="27dp" />

				<TextView android:id="@+id/lihat_semua"
					android:fontFamily="Lato"
					android:textStyle="bold"
					android:textSize="12sp"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="236dp"
					android:layout_marginTop="557dp"
					android:layout_width="94dp"
					android:layout_height="21dp"
					android:text="@string/lihat_semua_string"
					 />

				<ImageView android:id="@+id/image_5"
					android:src="@drawable/image_5"
					android:contentDescription="image_5"
					 android:layout_marginStart="278dp"
					android:layout_marginTop="51dp"
					android:layout_width="34dp"
					android:layout_height="26dp" />

				<TextView android:id="@+id/levelup_id"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:textSize="15sp"
					android:textColor="@color/_bg__android_large___1_ek2_color"
					android:layout_marginLeft="70dp"
					android:layout_marginTop="57dp"
					android:layout_width="119.5dp"
					android:layout_height="25.5dp"
					android:text="@string/levelup_id_string"
					 />

				<TextView android:id="@+id/lihat_semua_ek1"
					android:fontFamily="Lato"
					android:textStyle="bold"
					android:textSize="12sp"
					android:textColor="@color/mobile_game_color"
					android:layout_marginLeft="233dp"
					android:layout_marginTop="331dp"
					android:layout_width="94dp"
					android:layout_height="21dp"
					android:text="@string/lihat_semua_ek1_string"
					 />


				<RelativeLayout android:id="@+id/____icon__gamepad_"
					android:layout_marginTop="53dp"
					android:layout_marginStart="30dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector"
						android:src="@drawable/vector"
						android:contentDescription="vector"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="33.87dp"
						android:layout_height="23dp" />

				</RelativeLayout>

				<ImageView android:id="@+id/image_43"
					android:src="@drawable/image_43"
					android:contentDescription="image_43"
					 android:layout_marginStart="40dp"
					android:layout_marginTop="377dp"
					android:layout_width="68dp"
					android:layout_height="80dp" />

				<ImageView android:id="@+id/image_44"
					android:src="@drawable/image_44"
					android:contentDescription="image_44"
					 android:layout_marginStart="329dp"
					android:layout_marginTop="174dp"
					android:layout_width="29dp"
					android:layout_height="25dp" />

				<ImageView android:id="@+id/image_44_ek1"
					android:src="@drawable/image_44_ek1"
					android:contentDescription="image_44_ek1"
					 android:layout_marginStart="-1dp"
					android:layout_marginTop="149dp"
					android:layout_width="29dp"
					android:layout_height="25dp" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>